bugfix/navbarAlign: Igor - fixed sidebar btn alignment when logged in

--- a/src/app/components/navbar/navbar.component.sass
+++ b/src/app/components/navbar/navbar.component.sass
@@ -30,10 +30,9 @@
 		list-style-type: none
 		.list-item
 			display: inline-block
-			&:first-child
-				margin-right: 10px
-			&:nth-child(2)
-				margin-right: 10px
+			margin-right: 10px
+			&:last-child
+				margin: 0
 			.mat-button
 				min-width: 50px
 				line-height: 1
